# booki

./: .gitignore  INSTALL.md  README.md
.github/workflows/: release.yml  runtime-ci.yml
Github/booki/: README.md
Github/booki/android/: proguard-rules.pro
Github/booki/android/app/src/main/java/dev/booki/audio/: M4aMuxer.kt  WavWriter.kt
Github/booki/android/app/src/main/java/dev/booki/catalog/: OpdsClient.kt
Github/booki/android/app/src/main/java/dev/booki/data/: Library.kt  Settings.kt
Github/booki/android/app/src/main/java/dev/booki/epub/: TextNormalizer.kt  TextSplitter.kt
Github/booki/android/app/src/main/java/dev/booki/tts/: OrpheusEngine.kt  Progress.kt  SpeechEngine.kt  SynthesisService.kt
Github/booki/android/app/src/main/java/dev/booki/ui/: ChapterPickerScreen.kt  LocalContextSafe.kt  SettingsScreen.kt  SetupScreen.kt
Github/booki/android/app/src/main/java/dev/booki/util/: DeviceCapabilities.kt
Github/booki/android/app/src/main/res/xml/: file_paths.xml
Github/booki/android/app/src/test/java/dev/booki/audio/: ChapterInjectorTest.kt
Github/booki/android/app/src/test/java/dev/booki/data/: AudioLibraryTest.kt
Github/booki/android/app/src/test/java/dev/booki/epub/: TextNormalizerTest.kt  TextSplitterTest.kt
Github/booki/android/app/src/test/java/dev/booki/tts/: CloudSettingsTest.kt
Github/booki/runtime/native/: booki_conv_transpose1d.c  booki_gguf.c  booki_native.h  booki_sequence.c
Github/booki/runtime/native/tests/: test_gguf.c  test_graph.c  test_matmul.c  test_mha.c  test_ops.c  test_ops_extra.c  test_ops_misc.c
Github/booki/runtime/tests/: test_smoke.c
Github/booki/runtime/tools/: booki_bench.c  booki_bench_native.c  booki_pack.py  inspect_control_flow.py  onnx_to_booki.py
android/: README.md  proguard-rules.pro  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/kokoro/: vocab.txt
android/app/src/main/java/dev/booki/audio/: AudioPreview.kt  ChapterInjector.kt  M4aMuxer.kt  SfxMixer.kt
android/app/src/main/java/dev/booki/catalog/: CatalogSources.kt  OpdsClient.kt
android/app/src/main/java/dev/booki/data/: AudioLibrary.kt  Library.kt  PlaybackPositions.kt  Settings.kt  Voices.kt
android/app/src/main/java/dev/booki/epub/: EpubReader.kt  NumberToWords.kt
android/app/src/main/java/dev/booki/player/: PlayerController.kt  PlayerService.kt
android/app/src/main/java/dev/booki/runtime/: NativeBootstrap.kt  NativeDirInjector.kt  NativeLibManifest.kt
android/app/src/main/java/dev/booki/sfx/: MoodClassifier.kt  SfxEngine.kt
android/app/src/main/java/dev/booki/tts/: CloudSettings.kt  CloudTtsEngine.kt  KokoroEngine.kt  KokoroTokenizer.kt  MatchaEngine.kt  ModelDownloader.kt  NpzReader.kt  SpeechEngine.kt  SynthesisService.kt  VoiceStore.kt
android/app/src/main/java/dev/booki/ui/: CatalogScreen.kt  MainActivity.kt  PlayerScreen.kt  SettingsScreen.kt  SetupScreen.kt
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/test/java/dev/booki/audio/: SfxMixerTest.kt
android/app/src/test/java/dev/booki/catalog/: CatalogSourcesTest.kt  OpdsClientTest.kt
android/app/src/test/java/dev/booki/data/: AudioLibraryTest.kt  LibraryTest.kt  VoicesTest.kt
android/app/src/test/java/dev/booki/epub/: NumberToWordsTest.kt
android/app/src/test/java/dev/booki/runtime/: NativeBootstrapTest.kt
android/app/src/test/java/dev/booki/sfx/: MoodClassifierTest.kt
android/app/src/test/java/dev/booki/tts/: SpeechEngineTest.kt
android/scripts/: dev-setup.sh  release-keystore.sh
runtime/: .gitignore  CMakeLists.txt  README.md  booki_baseline.c  booki_baseline.h
runtime/docs/: KOKORO_PORT.md  kokoro-int8-inspect.txt
runtime/native/: booki_conv1d.c  booki_graph.c  booki_graph.h  booki_lstm.c  booki_matmul.c  booki_native.h  booki_ops.c  booki_sme.c  booki_tensor.c  booki_threading.c  booki_threading.h
runtime/native/tests/: test_arena.c  test_conv1d.c  test_conv_transpose1d.c  test_lstm.c  test_matmul.c  test_ops_more.c  test_sequence.c
runtime/scripts/: fetch-kokoro.sh
runtime/tools/: booki_bench_block.c  booki_bench_native.c  booki_eval.c  booki_run_test_mlp.c  inspect_onnx.py  make_test_mlp.py  make_test_mlp_onnx.py  onnx_to_booki.py
scripts/: pre-commit  regression-gate.py
